fix: remove z-index

--- a/frontend/src/app/components/nav-bar/nav-bar.component.scss
+++ b/frontend/src/app/components/nav-bar/nav-bar.component.scss
@@ -7,9 +7,8 @@
       display: flex;
       justify-content: flex-end;
       align-items: center;
-      position: fixed;
+      position: relative;
       top: 0;
-      z-index: 4;
       right: 0;
     }
       
